# NoiseNinja

./: .gitignore  CMakeLists.txt  README.md
cmake/: InstallVST3.cmake
include/: PluginEditor.h  PluginProcessor.h
include/ui/: NoiseUI.hpp
src/: PluginEditor.cpp  PluginProcessor.cpp
src/ui/: NoiseUI.cpp
